--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.5",
     "express-session": "^1.15.6",
     "fcm-node": "^1.4.0",
     "jsonwebtoken": "^8.4.0",
